used position absolute to help place time on the thumbnail and added z-index to prevent the thumbnail from overlaping the header

--- a/html-css-course-final-project/styles/video.css
+++ b/html-css-course-final-project/styles/video.css
@@ -22,6 +22,7 @@
 
 .thumbnail-row {
   margin-bottom: 15px;
+  position: relative;
 }
 
 .video-author,
@@ -39,4 +40,20 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 15px;
   row-gap: 40px;
+}
+
+.video-time {
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  font-weight: 700;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-radius: 2px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
 }
